<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_likes">Likes icon</string>
    <string name="number_of_likes" translatable="false">12,4K</string>
    <string name="description_reposts">Reposts icon</string>
    <string name="number_of_reposts" translatable="false">20</string>
    <string name="description_views">Views icon</string>
    <string name="number_of_views" translatable="false">60</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_edit">Edit</string>
    <string name="post_text">Post Text</string>
    <string name="error_empty_content">Content cant be empty</string>
    <string name="edit_message">Edit Message</string>
    <string name="description_save">Save icon</string>
    <string name="description_cancel_edit_button">Cancel edit button</string>
    <string name="description_cancel_edit_icon">Cancel edit icon</string>
    <string name="text_post_edited">Text post edited</string>
    <string name="description_cancel_edit">Cancel edit icon</string>
    <string name="chooser_share_post">Share post</string>
    <string name="description_button_add">Create new post button</string>
    <string name="description_video_image">Video image</string>
    <string name="description_button_edd">Create new post button</string>
    <string name="description_play_icon">Play video icon</string>
    <string name="google_play_unavailable">Warning! There are no google services on your device. Notifications cannot be sent.</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="channel_create_name">Server notifications new post</string>
    <string name="channel_create_description">Notifications about new post creation</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="notification_user_create_new_post">%1$s created new post:</string>
</resources>